<resources>
    <string name="app_name">TechBodhi</string>
    <string name="title_activity_master_base">MasterBaseActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="heading">Heading</string>
    <string name="content">Write Content</string>
    <string name="Post">Post</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="firstname">Enter Your Firstname</string>
    <string name="lastname">Enter Your Lastname</string>
    <string name="emailaddress">Enter Your Email ID</string>
    <string name="password">Enter Your Password</string>
    <string name="address">Enter Your Address</string>
    <string name="city">Enter Your City</string>
    <string name="mobile">Enter Your Mobile Number</string>
    <string name="btnRegister">Sign Up</string>
    <string name="btnLogin">Login</string>
    <string name="title_activity_user_login">UserLoginActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dob">Select DOB</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="username">Enter Your Username</string>
</resources>
