<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cj46.tejas.com.techbodhi.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/loginperson"
                android:background="@drawable/tb"
                android:layout_gravity="top|center_horizontal"
                android:layout_margin="30dp"
                android:padding="10dp"
                android:layout_marginBottom="30dp" />

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailaddress"
                android:inputType="textEmailAddress"
                android:background="@drawable/edittext"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:layout_marginTop="50dp" />

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_margin="5dp"
                android:padding="10dp" />

            <TextView
                android:id="@+id/login_error"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:onClick="NavigateToMain"
                android:text="@string/btnLogin"
                android:textColor="#fff"
                android:padding="10dp"
                android:layout_margin="5dp" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:onClick="NavigateToRegister"
                android:text="@string/btnRegister"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_margin="5dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
